k8s/analytics.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  labels:
    app.kubernetes.io/instance: insta
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: matomo
    app.kubernetes.io/instance: insta
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-deployment
  labels:
    app.kubernetes.io/component: analytics
    app.kubernetes.io/instance: insta
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: matomo
      app.kubernetes.io/instance: insta
  template:
    metadata:
      labels:
        app.kubernetes.io/name: matomo
        app.kubernetes.io/instance: insta
    spec:
      terminationGracePeriodSeconds: 0
      containers:
        - name: analytics-container-php
          image: matomo:fpm-alpine
          ports:
            - name: fastcgi
              containerPort: 9000
          volumeMounts:
            - name: analytics-volume-code
              mountPath: /var/www
        - name: analytics-container-nginx
          image: nginx:1.19-alpine
          lifecycle:
            postStart:
              exec:
                command: ["cp", "-r", "/mount/www/.", "/var/www"]
          ports:
            - name: http
              containerPort: 80
          volumeMounts: 
            - name: analytics-volume-code
              mountPath: /mount/www
            - name: analytics-volume-config
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: analytics-volume-code
          emptyDir: {}
        - name: analytics-volume-config
          configMap: 
            name: analytics-config-map
            items:
              - key: nginx-config
                path: default.conf
