k8s/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  labels:
    app.kubernetes.io/instance: insta
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: php
    app.kubernetes.io/instance: insta
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app.kubernetes.io/component: api
    app.kubernetes.io/instance: insta
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: php
      app.kubernetes.io/instance: insta
  template:
    metadata:
      labels:
        app.kubernetes.io/name: php
        app.kubernetes.io/instance: insta
    spec:
      terminationGracePeriodSeconds: 0
      containers:
        - name: api-container-php
          image: ghcr.io/kpatel20538/insta-api
          lifecycle:
            postStart:
              exec:
                command: ["cp", "-r", "/app/.", "/var/www"]
          ports:
            - name: fastcgi
              containerPort: 9000
          volumeMounts:
            - name: api-volume-code
              mountPath: /var/www
        - name: api-container-nginx
          image: nginx:1.19-alpine
          ports:
            - name: http
              containerPort: 80
          volumeMounts: 
            - name: api-volume-code
              mountPath: /var/www
            - name: api-volume-config
              mountPath: /etc/nginx/conf.d
          livenessProbe:
            periodSeconds: 5
            httpGet:
              path: /get
              port: http
          readinessProbe:
            periodSeconds: 1
            httpGet:
              path: /get
              port: http
      volumes:
        - name: api-volume-code
          emptyDir: {}
        - name: api-volume-config
          configMap: 
            name: api-config-map
            items:
              - key: nginx-config
                path: default.conf
