k8s/database.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-service
  labels:
    app.kubernetes.io/instance: insta
spec:
  clusterIP: None
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
  selector:
    app.kubernetes.io/name: mysql
    app.kubernetes.io/instance: insta
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-deployment
  labels:
    app.kubernetes.io/instance: insta
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mysql
      app.kubernetes.io/instance: insta
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mysql
        app.kubernetes.io/instance: insta
    spec:
      containers:
        - name: database-container
          image: mysql:8.0
          ports:
            - name: mysql
              containerPort: 3306
          volumeMounts:
            - name: database-volume
              mountPath: /var/lib/mysql
        volumes:
          - name: database-volume
            persistentVolumeClaim:
              claimName: database-pvc
