k8s/echo.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  labels:
    app.kubernetes.io/instance: insta
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      name: http
  selector:
    app.kubernetes.io/name: httpbin
    app.kubernetes.io/instance: insta
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deployment
  labels:
    app.kubernetes.io/component: echo
    app.kubernetes.io/instance: insta
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: httpbin
      app.kubernetes.io/instance: insta
  template:
    metadata:
      labels:
        app.kubernetes.io/name: httpbin
        app.kubernetes.io/instance: insta
    spec:
      terminationGracePeriodSeconds: 0
      containers:
        - name: echo-container
          image: kennethreitz/httpbin
          ports:
            - name: http
              containerPort: 80
          livenessProbe:
            periodSeconds: 15
            httpGet:
              path: /get
              port: http
          readinessProbe:
            periodSeconds: 5
            httpGet:
              path: /get
              port: http
