k8s/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app.kubernetes.io/instance: insta
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: spa
    app.kubernetes.io/instance: insta
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: insta
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: spa
      app.kubernetes.io/instance: insta
  template:
    metadata:
      labels:
        app.kubernetes.io/name: spa
        app.kubernetes.io/instance: insta
    spec:
      terminationGracePeriodSeconds: 0
      containers:          
        - name: frontend-container
          image: ghcr.io/kpatel20538/insta-frontend
          ports:
            - name: http
              containerPort: 80
          livenessProbe:
            periodSeconds: 5
            httpGet:
              path: /
              port: http
          readinessProbe:
            periodSeconds: 1
            httpGet:
              path: /
              port: http
