k8s/session.yaml
apiVersion: v1
kind: Service
metadata:
  name: session-service
  labels:
    app.kubernetes.io/instance: insta
spec:
  clusterIP: None
  ports:
    - name: redis
      port: 6379
      targetPort: redis
  selector:
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: insta
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: session-deployment
  labels:
    app.kubernetes.io/instance: insta
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: redis
      app.kubernetes.io/instance: insta
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redis
        app.kubernetes.io/instance: insta
    spec:
      containers:
      - name: session-container
        image: redis:6.2-alpine
        ports:
          - name: redis
            containerPort: 6379
