k8s/storage.yml
apiVersion: v1
kind: Service
metadata:
  name: storage-service
  labels:
    app.kubernetes.io/instance: insta
spec:
  clusterIP: None
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: minio
    app.kubernetes.io/instance: insta
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage-deployment
  labels:
    app.kubernetes.io/instance: insta
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: minio
      app.kubernetes.io/instance: insta
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: minio
        app.kubernetes.io/instance: insta
    spec:
      containers:
      - name: storage-container
        image: minio/minio
        ports:
          - name: http
            containerPort: 80
        volumeMounts:
          - name: storage-volume
            mountPath: /data
      volumes:
        - name: storage-volume
          persistentVolumeClaim:
            claimname: storage-pvc
