k8s/shared-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: shared-insta
  labels:
    app.kubernetes.io/instance: insta
spec:
  rules:
    - host: api-kpatel20538.cloud.okteto.net
      http:
        paths:
          - path: /uploads
            backend:
              serviceName: storage-service
              servicePort: 80
          - path: /api
            backend:
              serviceName: api-service
              servicePort: 80
          - path: /
            backend:
              serviceName: frontend-service
              servicePort: 80
    - host: analytics-kpatel20538.cloud.okteto.net
      http:
        paths:
          - path: /
            backend:
              serviceName: analytics-service
              servicePort: 80
